# caactus

./: .gitignore  README.md  config.toml  pyproject.toml
caactus/: background_processing.py  boundary_segmentation.py  csv_summary.py  csv_summaryold.py  introduction.py  object_classification.py  pixel_classification.py  pln_modelling.py  plnmodelling.py  renaming.py  summary_statistics.py  summary_statistics_eucast.py  tif2h5py.py  utils.py
caactus.egg-info/: PKG-INFO  SOURCES.txt
caactus/gui/: descriptions.py  helpers.py  main.py  steps.py
caactus/gui/assets/: config.toml  default_config.toml
