[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]


[project]
name = "caactus"
version = "0.1.8"
description = "Package for pre- and post-processing of images and data for working with ilastik-software"
readme = "README.md"
license = {text = "MIT License"}
requires-python = ">=3.10.12"
keywords = [
        "python",
        "count",
        "data",
        "ilastik",
        "image data",
        "image processing",
        "PLN",
        "image analysis"
        ]
authors = [
  {name = "Jakob Scheler", email = "jakobscheler@gmail.com"},
]
maintainers = [{name = "Jakob Scheler", email = "jakobscheler@gmail.com"}
]
classifiers = [
        # How mature is this project? Common values are
        #   3 - Alpha
        #   4 - Beta
        #   5 - Production/Stable
        "Development Status :: 4 - Beta",
        # Indicate who your project is intended for
        "Intended Audience :: Science/Research",
        # Pick your license as you wish (should match "license" above)
        "License :: OSI Approved :: MIT License",
        # Specify the Python versions you support here. In particular, ensure
        # that you indicate whether you support Python 2, Python 3 or both.
        "Programming Language :: Python",
]
dependencies = [
        "imagecodecs",
        "tifffile",
        "h5py",
        "numpy",
        "pathlib",
        "pandas",
        "matplotlib",
        "pyPLNmodels",
        "tomli",
        "argparse",
        "seaborn",
]

[project.urls]
Repository = "https://github.com/mr2raccoon/caactus"
Documentation = "https://github.com/mr2raccoon/caactus"

[project.scripts]
tif2h5py = "caactus.tif2h5py:main"
renaming = "caactus.renaming:main"
pixel_classification = "caactus.pixel_classification:main"
boundary_segmentation = "caactus.boundary_segmentation:main"      
background_processing = "caactus.background_processing:main"
object_classification = "caactus.object_classification:main"
csv_summary = "caactus.csv_summary:main"
summary_statistics = "caactus.summary_statistics:main"
summary_statistics_eucast = "caactus.summary_statistics_eucast:main"
pln_modelling = "caactus.pln_modelling:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
caactus = [
        "gui/assets/fonts/*.ttf",
        "gui/assets/fonts/*.txt",
        "gui/assets/favicon.ico",
]

[tool.setuptools.packages.find]
where = ["."]
include =["caactus"]
